# Multi-threaded-OpenGL-Rendering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
